"glm".  To support this, Domains may implement a method to return
alias names.  Use of the aliases results in a warning, but otherwise
everything will work - Aliases may be disabled at some point to force
people to use the official name exclusively.  All core modules have
been updated to use "glm" over "alp", but "alp" and "mlm" may also be
used in the interim.

* MB 7.2

Minor patches.  Released as a separate supported build as the basis
for Alpine's 2001 demo branch line (branch tag "V7_2").

* MB 7.0.2

Minor Patches.  Released as a separate supported build because of
patch buildup.

* MB 7.0.1

Default database connection information has been moved out of all
standard ".q" and ".cfg" files.  This means that Parameters are now 
required, either from a .cougaarrc file (was .alprc - see below) or as
-D arguments on the java command line (org.cougaar.database,
org.cougaar.database.user, org.cougaar.database.password).

Parameters files have changed a bit.  Previous versions used the file
.alprc as found in the ConfigPath.  Now, parameters are set first from
a file ".cougaarrc" in $HOME and then by the file cougaar.rc somewhere
in ConfigPath (e.g. in your society's config directory).  This allows,
for instance, databases to be selected in the the config directory but
have individual usernames and passwords set outside on a per-user
basis.  See the javadoc for org.cougaar.util.Parameters for more
information.   A (non-functional) example of the format expected in
these files is in this directory (core/doc) as "example.cougaarrc".

At this point, .alprc is still searched for and used as before, albeit
with warnings that they will be ignored in some future release.

Changed the third party charting software from Sitraka (was KLGroup) 
jcchart400K.jar to an upgrade of jcchart451K.jar.   Enables Inventory GUI 
improvements.  Cannot mix and match different builds of glm and core.

Promoted Delta's DBConnectionPool facility to org.cougaar.util.

* MB 7.0
