@@ -17,7 +17,7 @@
 <b><font size=+2>Release Notes</font></b></h2>
 
 <h2>
-<b><font size=+2>COUGAAR 8.02</font></b></h2>
+<b><font size=+2>COUGAAR 8.0</font></b></h2>
 </td>
 
 <td ALIGN=CENTER WIDTH="200"><a href="http://www.cougaar.org"><img SRC="cougaar-smalllogo.jpg" BORDER=0></a></td>
@@ -86,6 +86,11 @@ core/src/Changelog</li>
 <li>
 PlugIn Developer Workshop presentations (on the <a href="HTTPS://www.alpine.bbn.com/">ALPINE
 website</a>)</li>
+<li>
+<a href="SoftwareOrganization.txt">
+Principles of COUGAAR Software Organization </a>
+</li>
+
 </ul>
 
 <h2>
